--- a/bandvotes/ranking.html
+++ b/bandvotes/ranking.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container theme-showcase">
-    <h2>{{ bandid }} Candidate Song Ranking</h2>
+    <h2>{{ band_name }} Candidate Song Ranking</h2>
 
 <p>
 This page shows the songs that we are considering for our <a href="/{{ bandid }}/repertoire">official repertoire</a>.
