Added a config page.
For now this page is "claimed" by the first user that gets to it, becoming the
admin user.  Here we can see the list of users who've accessed the ranking page
and, soon, will allow the admin to remove voting rights.

--- a/bandvotes/ranking.html
+++ b/bandvotes/ranking.html
@@ -73,6 +73,11 @@ Songs that see no activity in a week (e.g. votes, comments, ...) will be deleted
 
     <hr>
   <a href="{{ logout_uri }}">Sign out</a>
+  {% if is_admin %}
+  <div>
+  <a href="/{{ bandid }}/config">Config</a>
+  </div>
+  {% endif %}
   </div>
   </body>
 </html>
